# Eventful

./: .gitignore  .gitmodules  README.md
builds/Ventscape/Assets/Assets/Shaders/shaded/: vertexShader.glsl
builds/Ventscape/lib/: box2d.lib  glad.lib
code/Ventscape_noEnginge_openGL/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
code/Ventscape_noEnginge_openGL/Assets/Meshes/: Box.glb
code/Ventscape_noEnginge_openGL/Assets/Shaders/: FlatColourVertexShader.glsl  fragmentShader.glsl
code/Ventscape_noEnginge_openGL/Assets/Shaders/shaded/: fragmentShader.glsl
code/Ventscape_noEnginge_openGL/Game/: CMakeLists.txt
code/Ventscape_noEnginge_openGL/Game/src/: Asset.h  Game.cpp  Game.h  TimeStep.h  game.cpp  game.h  main.cpp
code/Ventscape_noEnginge_openGL/Game/src/entities/: Entity.cpp  Entity.h  PlayerCharacter.cpp  PlayerCharacter.h  entity.cpp  entity.h
code/Ventscape_noEnginge_openGL/Game/src/physics/: Listner.cpp  Listner.h  PhysicsWorld.cpp  PhysicsWorld.h  listner.cpp  listner.h
code/Ventscape_noEnginge_openGL/Game/src/rendering/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  mesh.cpp  mesh.h  shader.cpp  shader.h
documentation/Presentations/: Ventscaped_Pitch_JH.pptx
